dnl Process this file with autoconf to produce a configure script.
AC_INIT(libkicylab, 0.0.1, alesko@member.fsf.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src/hello.cc)

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_CXX

AM_PROG_LEX
AC_PROG_YACC
AC_PROG_LIBTOOL

AC_OUTPUT(Makefile src/Makefile libkicylab/Makefile)